@@ -70,7 +70,7 @@
      <x>0</x>
      <y>0</y>
      <width>900</width>
-     <height>26</height>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -172,6 +172,8 @@
     <addaction name="actionInline"/>
     <addaction name="actionInlineDeep"/>
     <addaction name="actionMakePrimitive"/>
+    <addaction name="separator"/>
+    <addaction name="actionAddHistoryLine"/>
     <addaction name="separator"/>
     <addaction name="actionSplitQuads"/>
     <addaction name="actionEditRaw"/>
@@ -1262,6 +1264,11 @@
   <action name="actionDownloadFrom">
    <property name="text">
     <string>Download From...</string>
+   </property>
+  </action>
+  <action name="actionAddHistoryLine">
+   <property name="text">
+    <string>Add History Line</string>
    </property>
   </action>
  </widget>
